--- a/backend/package.json
+++ b/backend/package.json
@@ -5,13 +5,15 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-      "start": "node app.js"
+        "start": "node ./dist/app.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "express": "^4.21.2"
+        "express": "^4.21.2"
+    },
+    "devDependencies": {
+        "@types/express": "^5.0.0"
     }
-  }
-  
+}
